--- a/src/App.css
+++ b/src/App.css
@@ -11,3 +11,12 @@ body {
   padding-top: var(--nav-height);
   box-sizing: border-box;
 }
+
+.background-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+}
