--- a/src/index.css
+++ b/src/index.css
@@ -18,3 +18,32 @@ body {
   z-index: 1000;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
 }
+
+@media (max-width: 500px) {
+  /* Homepage */
+  #TitleSorteador {
+    font-size: 4.5rem;
+  }
+
+  #DescriptionSorteador {
+    font-size: 1.8rem;
+  }
+
+  /* NomesPage */
+  #TitleNomes {
+    font-size: 3.2rem;
+  }
+
+  #DescriptionNome {
+    font-size: 1.5rem;
+  }
+
+  /* NumerosPage */
+  #TitleNumeros {
+    font-size: 3.2rem;
+  }
+
+  #DescriptionNumeros {
+    font-size: 1.5rem;
+  }
+}
